--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -95,9 +95,37 @@ We will only consider $\ring$-modules for the specific choice of ring $\ring = \
 
 We also need appropriate maps between modules that preserve this structure. Notably, a map $f\colon\,A\to B$ between $\ring$-modules with the same $\ring$ is called $\ring$-linear, if $f(x+y) = f(x) + f(y)$ and $f(rx) = rf(x)$ holds for each $x,y\in A$, $r\in\ring$.
 
+To ensure that during aggregation, our norms don't grow too much, we will use the following auxilliary lemma to control the growth of the norm bounds.
+\begin{lemma}\label{lem:normgrowth}
+Let $n, \alpha_w, \rho, \beta$ be positive integers such that $n$ is a power of two.
+Let $\ring$ be the polynomial ring $\defringq$.
+%Let $W = \tern_\alpha$.
+Then for any $\ell\leq \rho$, for any $\vec{x}_1,\ldots,\vec{x}_\ell\in \ring$ with $\norm{\vec{x}_i}\leq \beta$ and any growth factors $\zeta \geq 1$, we have
+\[
+ \Pr\Bigl[\vec{w}_1,\ldots,\vec{w}_\ell \gets \tern_{\alpha_w}\colon \Bigl\|\smashoperator{\sum_{i=1}^{\ell}} \vec{w}_i\cdot \vec{x}_i\Bigr\| > \zeta\cdot \beta \bigr] < 2n\cdot \exp\Bigl(-\frac{\zeta^2}{2\alpha\rho}\Bigr)\enspace.
+\]
+% where the probability space is over choosing each $\vec{w}_i\gets W$ iid.\ uniform.
+\end{lemma}
+\begin{proof}
+Recall that $\tern_{\alpha_w}$ denotes ternary polynomials with weight exactly $\alpha_w$. We will show that the claim holds even if we fix the positions of the non-zero entries in each $\vec{w}_i$ and only consider the randomness coming from the $\pm 1$-signs.
+Now observe that for each fixed $k$, the $k$th coefficient $y_k$ of $\sum_{i=1}^{\ell} \vec{w}_i \vec{x}_i$ is a sum of the form
+\[
+ y_k = \sum_{j=1}^{\alpha_w\cdot \ell} b_j c_j\enspace,
+\]
+where each $b_j$ is some coefficient of some $\vec{x}_i$ and each $c_j\in\{-1,+1\}$ iid, corresponding to a sign choice of some coefficient of some $\vec{w}_i$ (everything depending on $k$).
+Thus, the expected value of $y_k$ is 0 and $\abs{b_j}\leq \beta$, so changing any individual $c_j$ out of the $\ell\alpha_w$ many $c_j$'s can change the value of $y_k$ by at most $2\beta$.
+We can thus apply McDiarmid's inequality~\cite{McDiarmid89} to obtain
+\[
+ \Pr\Bigl[\abs{y_k} > \zeta\beta\Bigr] \leq 2\exp\Bigl(\frac{-2(\zeta\beta)^2}{\ell\alpha_w(2\beta)^2}\Bigr) \leq 2\exp\Bigl(- \frac{\zeta^2}{2\alpha_w\rho} \Bigr)\enspace.
+\]
+Taking a union bound over all $n$ coefficients $y_k$ of $\sum_{i=1}^{\ell} \vec{w}_i \vec{x}_i$ then gives the claim.
+\qed
+\end{proof}
+
+% \gnote{Add remark on tightness and $\zeta \geq \alpha_w$.}
 
 
-\gnote{Move McDiarmid bound to this section here}
+% \gnote{Move McDiarmid bound to this section here}
 
 
 \gnote{needs versioning}
